--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     ]
   },
   "author": "ulisesrmzroche",
-  "repository": "https://github.com/atom/zigzag",
+  "repository": "https://github.com/ulisesrmzroche/zigzag",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
